--- a/docs/02-naming.tex
+++ b/docs/02-naming.tex
@@ -1,3 +1,9 @@
 \section*{ОПРЕДЕЛЕНИЯ, ОБОЗНАЧЕНИЯ И СОКРАЩЕНИЯ}
 
+\begin{enumerate}
+	\item ЦПУ (центральное процессорное устройство)  -- электронный блок либо интегральная схема, исполняющая машинные инструкции (код программ), главная часть аппаратного обеспечения компьютера;
+
+	\item ОЗУ (оперативно запоминающие устройство) -- техническое устройство, компонент аппаратного обеспечения компьютера, реализующий функции оперативной памяти.
+\end{enumerate}
+
 \pagebreak
