--- a/docs/03-intro.tex
+++ b/docs/03-intro.tex
@@ -1,9 +1,17 @@
 \section*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{section}{ВВЕДЕНИЕ}
 
-В данной научно-исследовательской работе должны быть проанализированы <Linux, zRam и оперативная память>.
+В последнее десятилетие центральное процессорное устройство  достигли своей пиковой тактовой частоты -- около 5 Ггц, и этот предел будет преодолён ещё не скоро \cite{cpu_pick}. Из-за того что ЦПУ стали настолько быстрыми, становится нередка ситуация, когда процессор не выполняет инструкции, а ждёт, пока данные переместятся с диска в оперативное запоминающее устройство (или наоборот) \cite{in-kernel-memory-compression}. Так, например, скорость работы системы с мощным ЦПУ, но с маленьким количеством ОЗУ может быть маленькой -- несмотря на быстроту, ЦПУ будет часто будет ожидать подсистему ввода/вывода \cite{in-kernel-memory-compression}.
 
+Цель работы -- изучить метод сжатия страниц виртуальной памяти в оперативной памяти в ядре Linux.
 
+Для достижения поставленной цели потребуется:
 
+\begin{itemize}
+	\item описать термины предметной области и обозначить проблему;
+	\item дать характеристику архитектуры ядер операционных систем;
+	\item изучить подходы, структуры данных и функции в ядре Linux, позволяющие управлять оперативной памятью;
+	\item описать работу модуля сжатия оперативной памяти в ядре Linux.
+\end{itemize}
 
 \pagebreak
