--- a/docs/10-analysis.tex
+++ b/docs/10-analysis.tex
@@ -1,12 +1,10 @@
 \section{Аналитическая часть}
 
-В данном разделе рассматриваются понятие оперативной памяти, сжатия данных и ядра Linux. 
+В данном разделе рассматривается понятие сжатия данных, оперативной памяти и виртуальной памяти. Даётся характеристика архитектурам современным ядрам операционных систем. Проводится краткий обзор ядра Linux, структур данных и функций позволяющих ему управлять памятью. Описывается работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
 
 \subsection{ЦПУ и оперативная память} 
 
 Оперативная память (\cite{ram}) -- компонент, который позволяет компьютеру кратковременно хранить данные и осуществлять быстрый доступ к ним. Функции оперативной памяти реализуются с помощью специального технического устройства -- оперативного запоминающего устройства (ОЗУ). В этой памяти во время работы компьютера хранится выполняемый машинный код и данные, обрабатываемые центральным процессорным устройством (англ. central processing unit, CPU \cite{cpu}).
-
-В последнее десятилетие центральное процессорное устройство  достигли своей пиковой тактовой частоты -- около 5 Ггц, и этот предел будет преодолён ещё не скоро \cite{cpu_pick}. Из-за того что ЦПУ стали настолько быстрыми, становится нередка ситуация, когда процессор не выполняет инструкции, а ждёт, пока данные переместятся с диска в оперативное запоминающее устройство (или наоборот) \cite{in-kernel-memory-compression}. Так, например, скорость работы системы с мощным ЦПУ, но с маленьким количеством ОЗУ может быть маленькой -- несмотря на быстроту, ЦПУ будет часто будет ожидать подсистему ввода/вывода. \cite{in-kernel-memory-compression}
 
 Проблему объема оперативной памяти компьютера можно решить увеличив количество планок ОЗУ. Но, у данного подхода есть свои минусы:
 
@@ -68,7 +66,7 @@
 	\label{fig:monolithic kernel}
 \end{figure}
  
-Реализация микроядра подразумевает отказ от одного большого процесса. Все функции ядра разделяются на несколько процессов, которые обычно называют серверами \cite{kernel-development}. При этом, в привилегированном режиме могут работать лишь те сервера (процессы), которым этот режим необходим, а остальные сервера работают в непривилегированном (пользовательском) режиме. К первым типам процессов можно отнести, например, механизмы управления памятью компьютера, а ко вторым драйвера устройств. При таком подходе все сервера изолированы и работают в независящем друг от друга адресном пространстве, то есть прямой вызов функций (как в монолитном ядре) невозможен. Все взаимодействия между серверами происходит с помощью механизма межпроцессного взаимодействия (англ. Interprocess Communcation, IPC \cite{IPC}), а обеспечивает передачу данных само ядро (больше никаких действий в системе оно не выполняет). Такой подход позволяет предотвратить возможность выхода из строя одного сервера при выходе из строя другого и позволяет по по мере необходимости одному серверу выгрузить из памяти другой. Но, как уже было отмечено выше, такая модель имеет более низкую производительность из-за накладных расходов на IPC. На рисунке \ref{fig:micro_kernel} представлена концептуальная схема операционной системы с монолитном ядром. 
+Реализация микроядра подразумевает отказ от одного большого процесса. Все функции ядра разделяются на несколько процессов, которые обычно называют серверами \cite{kernel-development}. При этом, в привилегированном режиме могут работать лишь те сервера (процессы), которым этот режим необходим, а остальные сервера работают в непривилегированном (пользовательском) режиме. К первым типам процессов можно отнести, например, механизмы управления памятью компьютера, а ко вторым драйвера устройств. При таком подходе все сервера изолированы и работают в независящем друг от друга адресном пространстве, то есть прямой вызов функций (как в монолитном ядре) невозможен. Все взаимодействия между серверами происходит с помощью механизма межпроцессного взаимодействия (англ. Interprocess Communcation, IPC \cite{ipc}), а обеспечивает передачу данных само ядро (больше никаких действий в системе оно не выполняет). Такой подход позволяет предотвратить возможность выхода из строя одного сервера при выходе из строя другого и позволяет по по мере необходимости одному серверу выгрузить из памяти другой. Но, как уже было отмечено выше, такая модель имеет более низкую производительность из-за накладных расходов на IPC. На рисунке \ref{fig:micro_kernel} представлена концептуальная схема операционной системы с монолитном ядром. 
 
 \begin{figure}[h]
 	\centering
@@ -91,7 +89,7 @@
 	\item ядро Linux является результатом свободной и открытой модели разработки \cite{kernel-development}.
 \end{itemize}
 
-\subsubsection{Структура ядра}
+\subsubsection{Основные компоненты ядра}
 
 Ядро Linux состоит из нескольких основных компонентов:
 
@@ -179,6 +177,15 @@
 	{code/alloc_page.c}
 \end{code}
 
+На рисунке \ref{fig:memory_schema} представлена схема управления страницами памяти в ядре Linux.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{img/memory_schema.pdf}
+	\caption{Схема управления памятью}
+	\label{fig:memory_schema}
+\end{figure}
+
 \subsubsection{Сжатие памяти в ядре Linux}
 
 Для сжатия данных в оперативной памяти, ядро берёт последовательность байт в памяти, сжимает их, записывает сжатую версию обратно в ОЗУ и хранит их до тех пор, пока эти данные не потребуются системе. Пока данные находятся в сжатом состоянии, система не может прочитать или записать какие-либо отдельные байты из этой сжатой последовательности. Когда данные потребуется системе вновь, система восстанавливает сжатую последовательность.
@@ -200,7 +207,20 @@
 
 \subsubsection{Модуль zRam}
 
-zRam \cite{zRam} -- модуль ядра Linux, который использует сжатое блочное устройство в оперативной памяти, пока не появится необходимость использовать файл подкачки (swap) на жестком диске. Данный модуль поддерживает несколько алгоритмов сжатия (на выбор пользователя), например DEFLATE, LZ0, LZ4, ZSTD. Модуль zRam описывается одним экземпляром структуры \texttt{struct zram} (листинг \ref{code:zram})
+zRam \cite{zram} -- модуль ядра Linux, который использует сжатое блочное устройство в оперативной памяти. Данный модуль поддерживает несколько алгоритмов сжатия (на выбор пользователя), например DEFLATE \cite{deflate}, LZ4 \cite{lz4}, ZSTD \cite{zstd}. 
+
+Блочное устройство zRam представляет из себя swap-устройство, создаваемый в пространстве пользователя, который является пролетаризированным по сравнению с другими устройствами. Подсистема подкачки отправляет страницу на устройство zRam через подсистему блочного ввода-вывода. Сжатая страница идентифицируется уникальным ключом $zkey$ (\ref{fig:zkey}):
+
+\begin{equation}\label{fig:zkey}
+	zkey = device\_id + offset
+\end{equation}
+где $device\_id$ -- идентификатор устройства подкачки, а $offset$ -- смещение страницы.
+
+Когда система подкачки определяет, что какая-либо из страниц, хранящихся в устройстве подачки, необходима пользователю (с помощью page fault \cite{page-fault}), устройство zRam уведомляется, о том что необходимо привести запрашиваемую страницу с идентификатор $zkey$ к исходному виду (распаковать) и вернуть её системе.
+
+Неудачная попытка записать блок в подсистему блочного вывода приводит к большим накладным расходам \cite{in-kernel-memory-compression}. По этой причине, при сохранении страницы памяти со степенью сжатия $k < 1$, zRam сохраняет исходную страницу памяти (не сжатую) в ОЗУ, что в конечном итоге не приводит к экономии места.
+
+Модуль в ядре zRam описывается одним экземпляром структуры \texttt{struct zram} (листинг \ref{code:zram})
 
 \begin{code}
 	\captionof{listing}{Структура \texttt{struct zram}}
@@ -244,7 +264,27 @@ zRam \cite{zRam} -- модуль ядра Linux, который использу
 
 Для идентификации страниц и управления данными данный модуль использует прямой поиск по таблице страниц (массив из структур \\\texttt{struct zram\_table\_entry}), которая хранится в структуре \texttt{struct zram}.
 
-Параллельная обработка страниц ограничивается семафором \\\texttt{struct rw\_semaphore}.
+Для параллельная обработки страниц используется семафор \\\texttt{struct rw\_semaphore}.
 
+zRam устраняет дубликаты страниц, которые содержат только нулевые байты. Модуль сохраняет лишь одну такую страницу и все остальные такие же страницы ссылаются на неё, не проводя сжатие этих страниц. Несмотря на то, чтобы определить, состоит ли страница полностью из нулевых байт, требуются накладные расходы, эти расходы чаще всего небольшие, по сравнению с затратами на сжатие \cite{in-kernel-memory-compression}.
+
+На рисунке \ref{fig:zram-kernel} представлена модель взаимодействия модуля zram, ядра и пользователя.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{img/zram-kernel.pdf}
+	\caption{Модель взаимодействия zram, ядра и пользователя}
+	\label{fig:zram-kernel}
+\end{figure}
+
+\subsection*{Вывод}
+
+В данном разделе были рассмотрены понятия сжатия данных, оперативной памяти и виртуальной памяти. 
+
+Были характеризованы современные ядра операционных систем: с монолитной и микроядерной архитектурой. 
+
+Проведён краткий обзор ядра Linux, структур данных и функций отвечающих за управление памятью внутри ядра.
+
+Описана работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
 
 \pagebreak
