--- a/docs/50-conclusion.tex
+++ b/docs/50-conclusion.tex
@@ -1,4 +1,14 @@
 \section*{ЗАКЛЮЧЕНИЕ}
 \addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
 
+Были рассмотрены понятия предметной области: сжатия данных, оперативной памяти и виртуальной памяти. 
+
+Были характеризованы современные ядра операционных систем: с монолитной и микроядерной архитектурой, описаны их плюсы и минусы.
+
+Проведён краткий обзор ядра Linux, структур данных и функций отвечающих за управление памятью внутри ядра: \texttt{struct page}, \texttt{alloc\_pages()}, \texttt{alloc\_page()}.
+
+Описана работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти. Рассмотрены основные структуры данных, использующиеся в этом модуле: \texttt{struct zram} и\\ \texttt{struct zram\_table\_entry}.
+
+Таким образом, цель работы, изучить метод сжатия страниц виртуальной памяти в оперативной памяти в ядре Linux, была достигнута.
+
 \pagebreak
