--- a/docs/60-bibliography.tex
+++ b/docs/60-bibliography.tex
@@ -4,51 +4,63 @@
 \begingroup
 \renewcommand{\section}[2]{}
 \begin{thebibliography}{}
-	\bibitem{data-compression}
-	Data compression | University of Londond [Электронный ресурс]. – Режим доступа: https://london.ac.uk/sites/default/files/study-guides/data-compression.pdf,
-	свободный – (10.11.2021)
-	
-	\bibitem{cpu}
-	What is CPU (Central Processing Unit)? - Computer Hope [Электронный ресурс]. – Режим доступа: https://www.computerhope.com/jargon/c/cpu.htm,
-	свободный – (10.11.2021)
-	
 	\bibitem{cpu_pick}
 	Why Aren’t CPUs Getting Faster? - Apple Gazette [Электронный ресурс]. – Режим доступа: https://applegazette.com/mac/why-arent-cpus-getting-faster/,
-	свободный – (10.11.2021)
-	
-	\bibitem{ram}
-	What Does Computer Memory (RAM) Do? [Электронный ресурс]. – Режим доступа: https://www.crucial.com/articles/about-memory/support-what-does-computer-memory-do,
 	свободный – (10.11.2021)
 	
 	\bibitem{in-kernel-memory-compression}
 	In-kernel memory compression [Электронный ресурс]. – Режим доступа: https://lwn.net/Articles/545244/, свободный – (10.11.2021)
 	
+	\bibitem{ram}
+	Designing Embedded Systems with 32-Bit PIC Microcontrollers and MikroC, 2014. Dogan Ibrahim. с. 1 - 39.
+	
+	\bibitem{cpu}
+	An Introduction to Information Processing, 1986. с. 45 - 71.
+	
 	\bibitem{increasing-ram-bad}
 	What are the negative effects on increasing RAM of a PC? [Электронный ресурс]. – Режим доступа: https://www.quora.com/What-are-the-negative-effects-on-increasing-RAM-of-a-PC, свободный – (10.11.2021)
 	
 	\bibitem{paging}
-	Paging | Android Developers [Электронный ресурс]. – Режим доступа: https://developer.android.com/jetpack/androidx/releases/paging, свободный – (10.11.2021)
+	Theoretical Computer Science, 15 July 1997. Esteban Feuerstein. с. 75 - 90.
 	
 	\bibitem{ssd-hdd-speed}
-	 SSD vs. HDD | Speed, Capacity, Performance \& Lifespan | AVG [Электронный ресурс]. – Режим доступа: https://www.avg.com/en/signal/ssd-hdd-which-is-best, свободный – (10.11.2021)
-	 
-	 \bibitem{linux}
-	 What is Linux? [Электронный ресурс]. – Режим доступа: https://www.linux.com/what-is-linux/, свободный – (10.11.2021)
+	SSD vs. HDD | Speed, Capacity, Performance \& Lifespan | AVG [Электронный ресурс]. – Режим доступа: https://www.avg.com/en/signal/ssd-hdd-which-is-best, свободный – (10.11.2021)
+	
+	\bibitem{data-compression}
+	Encyclopedia of Information Systems, 2002. Khalid Sayood. с. 5 - 27.
 	
 	\bibitem{lossless-compression}
 	Industrial Control Technology. Peng Zhang, 2008. с. 675 - 774.
 	
 	\bibitem{kernel-development}
-	Ядро Linux. Описание процесса разработки. Третье издание. Роберт Лав, 2019. с. 25 - 36.
+	Ядро Linux. Описание процесса разработки. Третье издание, 2019. Роберт Лав. с. 25 - 36.
+	
+	\bibitem{ipc}
+	Linux Kernel 2.4 Internals: IPC mechanisms [Электронный ресурс]. – Режим доступа: https://tldp.org/LDP/lki/lki-5.html, свободный – (15.11.2021)
+	 
+	 \bibitem{linux}
+	 What is Linux? -- The Linux Kernel Documentation [Электронный ресурс]. – Режим доступа: https://www.linux.com/what-is-linux/, свободный – (10.11.2021)
 	
 	\bibitem{memory-page}
+	Memory Management — The Linux Kernel Documentation [Электронный ресурс]. – Режим доступа: https://www.kernel.org/doc/html/latest/admin-guide/mm/index.html, свободный – (10.11.2021)
 	
-Memory Management — The Linux Kernel documentation [Электронный ресурс]. – Режим доступа: https://www.kernel.org/doc/html/latest/admin-guide/mm/index.html, свободный – (10.11.2021)
+	\bibitem{4kb-page-size}
+	Using 4KB Page Size for Virtual Memory is Obsolete [Электронный ресурс]. – Режим доступа: https://ieeexplore.ieee.org/document/5211562, свободный – (10.11.2021)
 	
+	\bibitem{zram}
+	zram: Compressed RAM-based block devices - The Linux Kernel Documentation [Электронный ресурс]. – Режим доступа: https://www.kernel.org/doc/html/latest/admin-guide/blockdev/zram.html, свободный – (10.11.2021)
 	
-\bibitem{4kb-page-size}
+	\bibitem{deflate}
+	DEFLATE Compressed Data Format Specification version 1.3 [Электронный ресурс]. – Режим доступа: https://www.w3.org/Graphics/PNG/RFC-1951, свободный – (20.11.2021)
 	
-Using 4KB Page Size for Virtual Memory is Obsolete [Электронный ресурс]. – Режим доступа: https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=\&arnumber=5211562, свободный – (10.11.2021)
+	\bibitem{lz4}
+	lz4/lz4: Extremely Fast Compression algorithm - GitHub [Электронный ресурс]. – Режим доступа: https://github.com/lz4/lz4, свободный – (20.11.2021)
+	
+	\bibitem{zstd}
+	facebook/zstd: Zstandard - Fast real-time compression algorithm [Электронный ресурс]. – Режим доступа: https://github.com/facebook/zstd, свободный – (20.11.2021)
+	
+	\bibitem{page-fault}
+	Kernel level exception handling -- The Linux Kernel Documentation [Электронный ресурс]. – Режим доступа: https://github.com/facebook/zstd, свободный – (20.11.2021)
 	
 \end{thebibliography}
 \endgroup
