docs: change structure

--- a/docs/00-title.tex
+++ b/docs/00-title.tex
@@ -29,7 +29,7 @@
 
 		\textbf{РАСЧЕТНО-ПОЯСНИТЕЛЬНАЯ ЗАПИСКА}
 
-		\textbf{\textit{К НАУЧНО-ИССЛЕДОВАТЕЛЬСКОЙ РАБОТЕ}}
+		\textbf{\textit{К ВЫПУСКНОЙ КВАЛИФИКАЦИОННОЙ РАБОТЕ}}
 
 		\textbf{\textit{НА ТЕМУ:}}
 	\end{center}
@@ -37,7 +37,7 @@
 	\begin{center}
 		\fontsize{18pt}{0.6cm}\selectfont 
 		
-		Исследование метода сжатия оперативной памяти в ядре Linux
+		Оптимизация метода сжатия страниц оперативной памяти в ядре Linux
 		
 	\end{center}
 
@@ -47,7 +47,7 @@
 		\fontsize{12pt}{0.7\baselineskip}\selectfont
 		\centering
 		\begin{signstabular}[0.7]{p{7.25cm} >{\centering\arraybackslash}p{4cm} >{\centering\arraybackslash}p{4cm}}
-			Студент группы \textbf{ИУ7-73Б} & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{А. В. Романов} \hfill} \\
+			Студент группы \textbf{ИУ7-83Б} & \uline{\mbox{\hspace*{4cm}}} & \uline{\hfill \textbf{А. В. Романов} \hfill} \\
 			& \scriptsize (Подпись, дата) & \scriptsize (И.О. Фамилия)
 		\end{signstabular}
 
