--- a/docs/01-abstract.tex
+++ b/docs/01-abstract.tex
@@ -1,5 +1,7 @@
 \section*{РЕФЕРАТ}
 
+\textbf{Тут точно нужно что-то поменять}
+
 Расчетно-пояснительная записка \pageref{LastPage} с., \totalfigures\ рис., \totaltables\ табл., 19 ист., 0 прил.
 
 Рассмотрены понятия сжатия данных, оперативной памяти и виртуальной памяти. Характеризованы современные ядра операционных систем: с монолитной и микроядерной архитектурой. Проведён краткий обзор ядра Linux, структур данных и функций отвечающих за управление памятью внутри ядра. Описана работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
