--- a/docs/03-intro.tex
+++ b/docs/03-intro.tex
@@ -1,6 +1,8 @@
 \section*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{section}{ВВЕДЕНИЕ}
 
+\textbf{Тут точно нужно что-то поменять}
+
 В последнее десятилетие центральное процессорное устройство  достигли своей пиковой тактовой частоты -- около 5 Ггц, и этот предел будет преодолён ещё не скоро \cite{cpu_pick}. Из-за того что ЦПУ стали настолько быстрыми, становится нередка ситуация, когда процессор не выполняет инструкции, а ждёт, пока данные переместятся с диска в оперативное запоминающее устройство (или наоборот) \cite{in-kernel-memory-compression}. Так, например, скорость работы системы с мощным ЦПУ, но с маленьким количеством ОЗУ может быть маленькой -- несмотря на быстроту, ЦПУ будет часто будет ожидать подсистему ввода/вывода \cite{in-kernel-memory-compression}.
 
 Цель работы -- изучить метод сжатия страниц виртуальной памяти в оперативной памяти в ядре Linux.
