--- a/docs/10-analysis.tex
+++ b/docs/10-analysis.tex
@@ -1,6 +1,8 @@
 \section{Аналитическая часть}
 
-В данном разделе рассматривается понятие сжатия данных, оперативной памяти и виртуальной памяти. Даётся характеристика архитектурам современным ядрам операционных систем. Проводится краткий обзор ядра Linux, структур данных и функций позволяющих ему управлять памятью. Описывается работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
+В данном разделе рассматривается понятия сжатия данных, оперативной памяти и виртуальной памяти. Даётся характеристика архитектурам современным ядрам операционных систем. Проводится краткий обзор ядра Linux, структур данных и функций позволяющих ему управлять памятью. Описывается работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
+
+\subsection{Постановка задачи}
 
 \subsection{ЦПУ и оперативная память} 
 
@@ -53,6 +55,10 @@
 
 Для каждой конкретной задачи будут важны одни требования и менее важны другие. Так, например, для сжатия больших видеоданных с их последующим хранением, важнее будет степень сжатия данных, а не скорость работы алгоритма.
 
+\subsection{Алгоритмы сжатия}
+
+А надо ли их тут расписывать?
+
 \subsection{Ядра операционных систем}
 
 Ядро операционной системы -- это программное обеспечение, которое предоставляет базовые функции для всех остальных частей операционной системы, управляет аппаратным обеспечением и распределяет системные ресурсы \cite{kernel-development}. Ядра операционных систем можно разделить на две группы: с монолитным или с микроядром. 
@@ -100,6 +106,8 @@
 	\item сетевые интерфейсы -- обеспечивают работу с сетевым оборудованием;
 	\item межпроцессная подсистема -- механизмы межпроцессного взаимодействия.
 \end{itemize}
+
+\subsubsection{Страничная организация памяти}
 
 \subsubsection{Виртуальная память}
 
@@ -186,7 +194,9 @@
 	\label{fig:memory_schema}
 \end{figure}
 
-\subsubsection{Сжатие памяти в ядре Linux}
+\subsubsection{Механизм \texttt{swap}}
+
+\subsection{Модуль ядра zram}
 
 Для сжатия данных в оперативной памяти, ядро берёт последовательность байт в памяти, сжимает их, записывает сжатую версию обратно в ОЗУ и хранит их до тех пор, пока эти данные не потребуются системе. Пока данные находятся в сжатом состоянии, система не может прочитать или записать какие-либо отдельные байты из этой сжатой последовательности. Когда данные потребуется системе вновь, система восстанавливает сжатую последовательность.
 
@@ -205,7 +215,7 @@
 
 Обычно размер сжатой страницы меньше чем \texttt{PAGE\_SIZE}, поэтому, обычно, коэффициент сжатия меньше единицы. Но, в некоторых случаях, коэффициент сжатия может быть больше единицы, и для решения этой проблемы необходимо, чтобы алгоритм реализованный в ядре мог найти выход из такой ситуации. В среднем страница памяти в ядре сжимается в два раза \cite{in-kernel-memory-compression}, то есть коэффициент сжатия $ k =\frac{1}{2}$.
 
-\subsubsection{Модуль zRam}
+\textbf{НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС}
 
 zRam \cite{zram} -- модуль ядра Linux, который использует сжатое блочное устройство в оперативной памяти. Данный модуль поддерживает несколько алгоритмов сжатия (на выбор пользователя), например DEFLATE \cite{deflate}, LZ4 \cite{lz4}, ZSTD \cite{zstd}. 
 
@@ -277,7 +287,13 @@ zRam устраняет дубликаты страниц, которые сод
 	\label{fig:zram-kernel}
 \end{figure}
 
-\subsection*{Вывод}
+\subsubsection{Схема работы}
+
+\subsubsection{Структуры данных}
+
+\subsubsection{Опция \texttt{writeback}} 
+
+\subsection{Вывод}
 
 В данном разделе были рассмотрены понятия сжатия данных, оперативной памяти и виртуальной памяти. 
 
