--- a/docs/02-naming.tex
+++ b/docs/02-naming.tex
@@ -1,5 +1,7 @@
 \section*{ОПРЕДЕЛЕНИЯ, ОБОЗНАЧЕНИЯ И СОКРАЩЕНИЯ}
 
+\textbf{Тут точно нужно что-то поменять}
+
 \begin{enumerate}
 	\item ЦПУ (центральное процессорное устройство)  -- электронный блок либо интегральная схема, исполняющая машинные инструкции (код программ), главная часть аппаратного обеспечения компьютера;
 
