docs: changes in analysis half

--- a/docs/60-bibliography.tex
+++ b/docs/60-bibliography.tex
@@ -8,6 +8,12 @@
 	Why Aren’t CPUs Getting Faster? - Apple Gazette [Электронный ресурс]. – Режим доступа: https://applegazette.com/mac/why-arent-cpus-getting-faster/,
 	свободный – (10.11.2021)
 	
+	\bibitem{data-compression-encyclopedia}
+	Data compression | computing - Encyclopedia Britannica [Электронный ресурс]. – Режим доступа: https://www.britannica.com/technology/data-compression, свободный – (24.03.2021)
+	
+	\bibitem{api}
+	API | computer programming - Encyclopedia Britannica [Электронный ресурс]. – Режим доступа: https://www.britannica.com/technology/API, свободный – (24.03.2021)
+	
 	\bibitem{in-kernel-memory-compression}
 	In-kernel memory compression [Электронный ресурс]. – Режим доступа: https://lwn.net/Articles/545244/, свободный – (10.11.2021)
 	
