--- a/docs/10-analysis.tex
+++ b/docs/10-analysis.tex
@@ -1,37 +1,48 @@
 \section{Аналитическая часть}
 
-В данном разделе рассматривается понятия сжатия данных, оперативной памяти и виртуальной памяти. Даётся характеристика архитектурам современным ядрам операционных систем. Проводится краткий обзор ядра Linux, структур данных и функций позволяющих ему управлять памятью. Описывается работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
+В данном разделе производится анализ предметной области. Даётся характеристика архитектурам современных ядрер операционных систем. Проводится краткий обзор ядра Linux, структур данных и его API. Описывается работа модуля ядра zram \cite{zram}, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
 
 \subsection{Постановка задачи}
+
+Модуль ядра zram хранит оперативную память в сжатом в виде. При каждом обращении системы к участкам оперативной памяти, происходит преобразование данных: сжатие, при попытке записи данных в оперативную память, или возвращение к исходному (из сжатого) виду, при попытке чтения данных. Для проведения любого из этих преобразований центральному процессорному устройству необходимо затратить какое-то количество времени. При проведении сжатия, возможно вариант когда размер выходных (сжатых) данных не изменился или остался исходным \cite{data-compression}: процессорное время потрачено, а выигрыш в размере сжатых данных оказался минимален. Не всегда процент сжатия данных прямо пропорционален машинному времени, потраченному на эти преобразования \cite{data-compression}.
+
+Таким образом, оптимизация метода сжатия страниц оперативной памяти должна определять (непосредственно до момента сжатия), соответствуют ли затраты процессорного времени, потраченные на сжатие данных, выигрышу в размере сжатых данных. Разработанный метод должен заранее определять, нужно ли сжимать страницу или хранить ее в несжатом виде.
 
 \subsection{ЦПУ и оперативная память} 
 
 Оперативная память (\cite{ram}) -- компонент, который позволяет компьютеру кратковременно хранить данные и осуществлять быстрый доступ к ним. Функции оперативной памяти реализуются с помощью специального технического устройства -- оперативного запоминающего устройства (ОЗУ). В этой памяти во время работы компьютера хранится выполняемый машинный код и данные, обрабатываемые центральным процессорным устройством (англ. central processing unit, CPU \cite{cpu}).
 
-Проблему объема оперативной памяти компьютера можно решить увеличив количество планок ОЗУ. Но, у данного подхода есть свои минусы:
+Проблему объема оперативной памяти компьютера можно решить увеличив количество планок ОЗУ. У данного подхода есть свои минусы:
 
 \begin{itemize}
 	\item электроэнергия -- каждая новая установленная планка увеличивает потребление энергии компьютера \cite{increasing-ram-bad};
 	\item физические ограничения -- количество слотов для планок на материнской плате ограничено;
-	\item стоимость -- планка стоит денег.
+	\item стоимость -- каждая планка стоит денег.
 \end{itemize}
 
-Альтернативным решением является использование системы подкачки страниц (англ. paging \cite{paging}) -- специальный механизм операционный системы, при котором отдельные фрагменты памяти (мало используемые или полностью не активные) перемещаются из оперативной памяти во вторичной хранилище, например, на жёсткий диск или другой внешний накопитель. Несмотря на то что количество ОЗУ в таком случае увеличивается, доступ к таким участкам памяти замедляется -- системе приходится работать (читать и писать) с внешним запоминающим устройством, а такие устройства работают значительно медленнее ОЗУ \cite{ssd-hdd-speed}.
+Альтернативным решением является использование системы подкачки страниц (англ. paging \cite{paging}) -- специальный механизм операционный системы, при котором отдельные фрагменты памяти (мало используемые или полностью не активные) перемещаются из оперативной памяти во вторичное хранилище, например, на жёсткий диск или другой внешний накопитель. Несмотря на то что количество ОЗУ в таком случае увеличивается, доступ к таким участкам памяти замедляется -- системе приходится работать (читать и писать) с внешним запоминающим устройством, а такие устройства работают значительно медленнее ОЗУ \cite{ssd-hdd-speed}.
 
-Ещё одним решением является сжатие данных прямо в оперативной памяти. Данный подход выигрывает у первого рассмотренного решения, так как он реализуется программно и не требует закупки дополнительных планок ОЗУ. Кроме того, этот подход выигрывает и у второго рассмотренного решения, благодаря тому что сжатие не требует работы с внешним накопителем, за счёт чего скорость обработки данных увеличивается. Сжатие данных так же имеет свои минусы, главным из которых является потребность в вычислительных ресурсах. ЦПУ должно выполнять инструкции для сжатия. Но, как и было описано в начале данного раздела, обычно ЦПУ как раз простаивает и не выполняет никакой работы, ожидая ввод/вывод.
+Ещё одним решением является сжатие данных прямо в оперативной памяти. Данный подход не имеет минусов выделенных у первого решения. Он реализуется программно и не требует закупки дополнительных планок ОЗУ. Кроме того, благодаря тому что сжатие не требует работы с внешним накопителем, скорость обработки данных увеличивается что позволяет избавиться от минуса (время работы) выделенного у второго решения. Сжатие данных так же имеет свои минусы, главным из которых является потребность в вычислительных ресурсах. ЦПУ должно выполнять инструкции для сжатия. Но, как и было отмечено во введении, чаще всего ЦПУ простаивает и не выполняет никакой работы, ожидая подсистему ввода/вывода.
 
 \subsection{Сжатие данных}
 
-Сжатие данных (англ. data compression \cite{data-compression}) --  это способ (алгоритмический) преобразования информации в другую форму, обычно более компактную. Сжатие основано на устранение избыточности, которая содержится в исходных данных. Примером является повторение в исходном тексте некоторых фрагментов. Такая избыточность устраняется заменой повторяющейся последовательности ссылкой на уже закодированный фрагмент с указанием его длины. Другой вид избыточности связан с тем, что некоторые значения в сжимаемых данных встречаются чаще других. Сокращение объёма данных достигается за счёт замены часто встречающихся данных короткими кодовыми словами, а редких -- длинными.
+Сжатие данных (англ. data compression \cite{data-compression-encyclopedia}) --  это способ (алгоритмический) преобразования информации в другую форму, чаще всего более компактную \cite{data-compression}. Сжатие основано на устранение избыточности, которая содержится в исходных данных. Примером является повторение в исходном тексте некоторых фрагментов. Такая избыточность устраняется заменой повторяющейся последовательности ссылкой на уже закодированный фрагмент с указанием его длины. Другой вид избыточности связан с тем, что некоторые значения в сжимаемых данных встречаются чаще других. Сокращение объёма данных достигается за счёт замены часто встречающихся данных короткими кодовыми словами, а редких -- длинными.
 
-Все методы сжатия данных делятся на два класса: без потерь и с потерями. Сжатие данных без потерь позволяет полностью восстановить сжатые данные, в отличии от сжатия с потерями. Первый вариант чаще всего используют для сжатия текстовых данных и компьютерных программ, а сжатие с потерями используют для сокращения аудио- или видеоданных -- для таких данных не требуется полное соответствие исходным данным. Алгоритмы сжатия данных с потерями обладают большей эффективностью, чем алгоритмы без потерь \cite{lossless-compression}.
+Все методы сжатия данных делятся на два класса: без потерь и с потерями. Сжатие данных без потерь позволяет полностью восстановить сжатые данные, в отличии от сжатия с потерями. Первый вариант чаще всего используют для сжатия текстовых данных и компьютерных программ, а сжатие с потерями используют для сокращения аудио- или видеоданных -- для таких данных не требуется полное соответствие исходным данным. Алгоритмы сжатия данных с потерями обладают большей эффективностью, чем алгоритмы без потерь \cite{lossless-compression}. В данной работе будут рассмотрены только алгоритмы сжатия данных без потерь: при работе с оперативной память терять данные непозволительно. На рисунке \ref{fig:conceptual-compressor} представлена концептуальная модель сжатия данных без потерь.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{img/conceptual_compressor.pdf}
+	\caption{Схема сжатия данных без потерь}
+	\label{fig:conceptual-compressor}
+\end{figure}
 
 \subsubsection{Коэффициент сжатия}
 
 Коэффициент сжатия -- характеристика алгоритмов сжатия данных, которая определяется формулой (\ref{fig:memory-compression}): 
 
 \begin{equation}\label{fig:memory-compression}
-	k = \frac{V_{original}}{V_{compressed}}
+	k = \frac{V_{original}}{V_{compressed}},
 \end{equation}
 где $V_{original}$ -- объём исходных данных, а $V_{compressed}$ -- сжатых.
 
@@ -47,23 +58,40 @@
 К алгоритмам сжатия могут применяться несколько требований:
 
 \begin{itemize}
-	\item скорость сжатия;
-	\item скорость декомпрессии;
+	\item скорость преобразования к сжатому виду;
+	\item скорость преобразования к исходному виду;
 	\item степень сжатия;
-	\item эффективность программной реализации.
 \end{itemize}
 
 Для каждой конкретной задачи будут важны одни требования и менее важны другие. Так, например, для сжатия больших видеоданных с их последующим хранением, важнее будет степень сжатия данных, а не скорость работы алгоритма.
 
 \subsection{Алгоритмы сжатия}
 
-А надо ли их тут расписывать?
+Главный принцип алгоритмов сжатия данных алгоритмов берет во внимание то, что в любом наборе (не случайном) данных, информация частично (либо,в редких случаях, полностью) повторяется \cite{lossless-compression}. С помощью математических методов можно определить вероятность повторения определенной комбинации байт. После этого можно создать создать некоторые коды, которые будут соответствовать наиболее распространяющимся наборам байт. Данные коды можно создать различными способами: энтропийное кодирование, кодирование повторов и сжатие с помощью словаря. С помощью указанных подходов возможно устранить дублирующую информацию из файла и уменьшить его итоговый размер (в сжатом виде). 
+
+\subsubsection{Энтропийное кодирование}
+
+Данный подход основывается на предположении о том, что до кодирования отдельные элементы последовательности данных имеют различную вероятность появления. После преобразований (кодирования) в результирующей последовательности вероятности появления отдельных элементов практически одинаковы \cite{lossless-compression}. Таким образом, энтропийное кодирование усредняет вероятности появления элементов в закодированное последовательности байт.
+
+\subsubsection{Кодирование повторов} 
+
+Кодирование повторов подразумевает замену повторяющихся символов (серии) на один символ и число его повторов. Серия -- последовательность данных, состоящих из одинаковых символов. Так, например, строка \\\texttt{a = IIIIIUUSEEVEEENNNNNNNN} может быть преобразована к виду \\\texttt{b = 5I2U1S2E1V3E8N}. В таком случае, коэффициент сжатия $k$ будет равен $k = \frac{len(a)}{len(b)} = \frac{22}{14} = 1.57$
+
+Такое кодирование эффективно для наборов данных, содержащих большое количество серий -- например, простых графических изображений. 
+
+\subsubsection{Сжатие с помощью словаря}
+
+При использовании сжатия данных с помощью словаря данные делятся на слова, а сами слова в исходном наборе данных заменяются на их индексы в словаре. Чаще всего, словарь пополняется словами из исходной последовательности данных в процессе сжатия. 
+
+Ключевым параметром такого метода сжатия является размер словаря. С одной стороны, чем больше его размер, тем больше эффективность сжатия. Однако, для неоднородного набора данных большой размер словаря может оказаться вреден. Например, при резком изменении типа данных большая часть словаря будет заполнена неактуальными словами. Кроме того, чем больше размер словаря, тем больше нужно дополнительной памяти для хранения слов в нём. 
+
+Благодаря тому, что алгоритмическая сложность доступа к элементам словаря константа, алгоритмы сжатия с использованием словаря приводят данные к исходному виду быстрее, чем алгоритмы с использованием подходов, которые были описаны выше \cite{lossless-compression}.
 
 \subsection{Ядра операционных систем}
 
-Ядро операционной системы -- это программное обеспечение, которое предоставляет базовые функции для всех остальных частей операционной системы, управляет аппаратным обеспечением и распределяет системные ресурсы \cite{kernel-development}. Ядра операционных систем можно разделить на две группы: с монолитным или с микроядром. 
+Ядро операционной системы -- это программное обеспечение, которое предоставляет базовый функционал для всех остальных частей операционной системы, управляет аппаратным обеспечением и распределяет системные ресурсы \cite{kernel-development}. Ядра операционных систем можно разделить на две группы: с монолитным или с микроядром.
 
-Монолитное ядро является самым простым, оно реализовано в виде одного большого процесса, который выполняется в одном адресном пространстве, все службы ядра находятся и выполняются в одном адресном пространстве. Благодаря этому, взаимодействия в ядре осуществляются очень просто, так, например, ядро может вызывать функции непосредственно, как это делают пользовательские приложения \cite{kernel-development}. Из-за отсутствия издержек, таких как синхронизация процессов и передача данных между ними, монолитные ядра операционных систем являются более производительным, чем микроядра. На рисунке \ref{fig:monolithic kernel} представлена концептуальная схема операционной системы с монолитном ядром.
+Монолитное ядро является самым простым, оно реализовано в виде одного большого процесса, который выполняется в одном адресном пространстве. Все службы ядра находятся и выполняются в одном адресном пространстве. Благодаря этому, взаимодействия в ядре осуществляются очень просто, так, например, ядро может вызывать функции непосредственно, как это делают пользовательские приложения \cite{kernel-development}. Из-за отсутствия издержек, таких как синхронизация процессов и передача данных между ними, монолитные ядра операционных систем являются более производительным, чем микроядра. На рисунке \ref{fig:monolithic kernel} представлена концептуальная модель операционной системы с монолитном ядром.
 
 \begin{figure}[h]
 	\centering
@@ -109,13 +137,13 @@
 
 \subsubsection{Страничная организация памяти}
 
+Работа с памятью в ядре Linux организована с помощью примитива страниц. Страница памяти -- набор некоторого количества байт. Хотя наименьшими адресуемыми единицами памяти являются байт и машинное слово, такой подход не является удобным \cite{kernel-development}. Размер страницы это фиксированная константа \texttt{PAGE\_SIZE}, которая на большинстве современных архитектур, поддерживаемых Linux, составляет 4 Кб \cite{4kb-page-size}. Страничная организация памяти позволяет реализовать внутри ядра Linux механизм виртуальной памяти.
+
 \subsubsection{Виртуальная память}
 
 Виртуальная память -- специальный механизм организации памяти, при котором процессы работают физическими адресами напрямую, а с виртуальными. С помощью такого подхода в ядре Linux реализуется защита адресного пространства процессов, так, например, процесс не может получить доступ к памяти другого процесса и внести туда изменения.
 
-Работа с память в ядре Linux организована с помощью примитива страниц. Страница памяти -- набор некоторого количества байт. Хотя наименьшими адресуемыми единицами памяти являются байт и машинное слово, такой подход не является удобным \cite{kernel-development}. 
-
-В ядре каждая физическая страница памяти представляется в виде структуры \texttt{struct page}. Рассматриваемая структура с наиболее важными полями представлена в листинге \ref{code:struct_page}.
+В ядре каждая физическая страница памяти описывается с помощью структуры \texttt{struct page}. Рассматриваемая структура с наиболее важными полями представлена в листинге \ref{code:struct_page}.
 
 \begin{code}
 	\captionof{listing}{Структура \texttt{struct page}}
@@ -135,15 +163,16 @@
 	{code/struct_page.c}
 \end{code}
 
-Рассмотрим некоторые поля данной структуры подробнее:
+Ниже представлено описание наиболее важных полей данной структуры:
 
 \begin{itemize}
 	\item \texttt{flags} -- флаги, которые хранят информацию о состоянии страницы в текущий момент, например, находится ли данная страница в кэше или нет. Каждый флаг представляет из себя один бит;
 	\item \texttt{\_refcount} -- счётчик ссылок на страницу. Если значение этого счётчика равно -1, это означает что страница нигде не используется;
-	\item \texttt{virtual} -- виртуальный адрес страницы, соответствует адресу страницы в виртуальной памяти ядра.
+	\item \texttt{virtual} -- виртуальный адрес страницы, соответствует адресу страницы в виртуальной памяти ядра;
+	\item \texttt{\_last\_cpupid} -- номер последнего ЦПУ, использовавшего данную страницу.
 \end{itemize}
 
-Рассматриваемая структура данных в ядре используется для учёта всей физической памяти, и определения какая область (страницы) памяти свободна, а какая нет. 
+Рассматриваемая структура данных в ядре используется для учёта всей физической памяти.
 
 В ядре Linux предусмотрен специальный низкоуровневый механизм для выделения памяти и несколько интерфейсов доступа к ней. Прототип функции основной функции выделения памяти представлен в листинге \ref{code:alloc_pages}.
 
@@ -165,7 +194,7 @@
 	{code/alloc_pages.c}
 \end{code}
 
-С помощью функции \texttt{alloc\_pages} можно выделить $2^{order}$ смежных страниц физической памяти. Возвращает указатель на структуру \texttt{struct page}, которая соответствует первой выделенной странице памяти. Для выделения одной страницы памяти используется функция \texttt{alloc\_page} (листинг \ref{code:alloc_page}).
+С помощью функции \texttt{alloc\_pages} можно выделить $2^{order}$ смежных страниц физической памяти. Функция возвращает указатель на структуру \texttt{struct page}, которая соответствует первой выделенной странице памяти. Для выделения одной страницы памяти используется функция \texttt{alloc\_page} (листинг \ref{code:alloc_page}).
 
 \begin{code}
 	\captionof{listing}{Прототип функции \texttt{alloc\_page}}
@@ -194,43 +223,48 @@
 	\label{fig:memory_schema}
 \end{figure}
 
-\subsubsection{Механизм \texttt{swap}}
+\subsubsection{Подкачка страниц}
+
+Подкачка страниц -- специальный механизм внутри ядра Linux, который реализован благодаря механизму виртуальной памяти, при котором отдельные страницы оперативной памяти записываются не в ОЗУ, а, чаще всего, в специальное вторичное хранилище, например, жесткий диск. Ядро само выбирает, какие страницы памяти попадут в это хранилище. Чаще всего, это неактивные или реже всего использующиеся страницы памяти. 
+
+Выгруженные из оперативной памяти страницы могут храниться как в специальном разделе жесткого диска, так и в файле. Пространство, где хранятся эти страницы, называется swap-пространством. При попытке обратиться к выгруженной странице, в ядре происходит исключительная ситуация, называемая page fault \cite{page-fault}. Обработчик прерываний обрабатывает данный запрос и перемещает страницу обратно в оперативную память. На рисунке \ref{img:swap} представлена схема работы подсистемы подкачки страниц в ядре Linux.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{img/swap.pdf}
+	\caption{Подсистема подкачки страниц}
+	\label{fig:swap}
+\end{figure}
 
 \subsection{Модуль ядра zram}
 
-Для сжатия данных в оперативной памяти, ядро берёт последовательность байт в памяти, сжимает их, записывает сжатую версию обратно в ОЗУ и хранит их до тех пор, пока эти данные не потребуются системе. Пока данные находятся в сжатом состоянии, система не может прочитать или записать какие-либо отдельные байты из этой сжатой последовательности. Когда данные потребуется системе вновь, система восстанавливает сжатую последовательность.
+Модуль ядра zram создает в оперативной памяти специальное блочное устройство. Такое устройство можно создать из пространства пользователя. Страницы памяти, попадающие в это устройство, сжимаются и хранятся прямо в оперативной памяти. Такой подход обеспечивает экономию памяти и быстрый ввод/вывод \cite{zram}. 
 
-Современные алгоритмы могут сжимать любое количество последовательных байт. Несмотря на это, в ядре удобно использовать фиксированную единицу сжатия памяти. Единицей хранения в ядре была выбрана страница памяти (англ. memory page \cite{memory-page}) -- фиксированная константа \texttt{PAGE\_SIZE}, которая на большинстве современных архитектур, поддерживаемых Linux, составляет 4 Кб \cite{4kb-page-size}.
-
-Для достижения высокой степени сжатия требуется выполнение большого количества команд ЦПУ, тогда как менее эффективное сжатие может выполняться быстрее. В ядре необходимо добиться баланса между временем и степенью сжатия. Кроме того, важно чтобы выбор алгоритма оставался гибким. Например для выполнения одной задачи подойдёт один алгоритм сжатия, а для второй другой.
-
-Из-за того что размер страницы достаточно большой (4 Кб), сжатие и восстановление данных -- достаточно дорогостоящие операции, поэтому необходимо ограничить количество этих операций. Нужно тщательно выбирать, какие страницы стоит сжимать, а какие нет. Алгоритм, реализованный в ядре Linux, определяющий какие страницы нужно сжимать, выбирает те страницы, которые вероятно будут использоваться снова, но вряд ли будут использоваться в ближайшем будущем \cite{in-kernel-memory-compression}. Такая реализация позволяет не тратить всё время ЦПУ на многократное сжатие и распаковку страниц. Кроме того, необходимо чтобы ядро могло идентифицировать сжатую страницу -- иначе её невозможно найти и распаковать.
-
-Размер страницы, к которой был применён алгоритм сжатия зависит от данных на исходной странице и его трудно предсказать. Степень сжатия страницы описывается следующей формулой (\ref{fig:page-compressing}):
-
-\begin{equation}\label{fig:page-compressing}
-	k = \frac{PAGE\_SIZE}{zsize}
-\end{equation}
-где \texttt{PAGE\_SIZE} размер страницы памяти в системе, а \texttt{zsize} -- размер сжатой страницы. 
-
-Обычно размер сжатой страницы меньше чем \texttt{PAGE\_SIZE}, поэтому, обычно, коэффициент сжатия меньше единицы. Но, в некоторых случаях, коэффициент сжатия может быть больше единицы, и для решения этой проблемы необходимо, чтобы алгоритм реализованный в ядре мог найти выход из такой ситуации. В среднем страница памяти в ядре сжимается в два раза \cite{in-kernel-memory-compression}, то есть коэффициент сжатия $ k =\frac{1}{2}$.
-
-\textbf{НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС НИЗКИЙ ФЛЕКС}
-
-zRam \cite{zram} -- модуль ядра Linux, который использует сжатое блочное устройство в оперативной памяти. Данный модуль поддерживает несколько алгоритмов сжатия (на выбор пользователя), например DEFLATE \cite{deflate}, LZ4 \cite{lz4}, ZSTD \cite{zstd}. 
-
-Блочное устройство zRam представляет из себя swap-устройство, создаваемый в пространстве пользователя, который является пролетаризированным по сравнению с другими устройствами. Подсистема подкачки отправляет страницу на устройство zRam через подсистему блочного ввода-вывода. Сжатая страница идентифицируется уникальным ключом $zkey$ (\ref{fig:zkey}):
+Чаще всего, созданное блочное устройство zram устанавливают как в качестве подсистемы подкачки. Механизм swap отправляет страницу в zram через подсистему блочного ввода-вывода. Сжатая страница внутри zram идентифицируется уникальным ключом $zkey$ (\ref{fig:zkey}):
 
 \begin{equation}\label{fig:zkey}
 	zkey = device\_id + offset
 \end{equation}
 где $device\_id$ -- идентификатор устройства подкачки, а $offset$ -- смещение страницы.
 
-Когда система подкачки определяет, что какая-либо из страниц, хранящихся в устройстве подачки, необходима пользователю (с помощью page fault \cite{page-fault}), устройство zRam уведомляется, о том что необходимо привести запрашиваемую страницу с идентификатор $zkey$ к исходному виду (распаковать) и вернуть её системе.
+Когда система подкачки определяет, что какая-либо из страниц, хранящихся в устройстве подачки, необходима пользователю (когда происходит прерывание page fault), устройство zram уведомляется, о том, что необходимо привести запрашиваемую страницу с идентификатор $zkey$ преобразовать к исходному виду и вернуть её системе. Пока данные находятся в сжатом состоянии, система не может прочитать или записать какие-либо отдельные байты из этой сжатой последовательности. Современные алгоритмы могут сжимать любое количество последовательных байт. Несмотря на это, модуль ядра zram использует работает лишь с виртуальными страницами памяти.
 
-Неудачная попытка записать блок в подсистему блочного вывода приводит к большим накладным расходам \cite{in-kernel-memory-compression}. По этой причине, при сохранении страницы памяти со степенью сжатия $k < 1$, zRam сохраняет исходную страницу памяти (не сжатую) в ОЗУ, что в конечном итоге не приводит к экономии места.
+Для достижения высокой степени сжатия требуется выполнение большого количества команд ЦПУ, тогда как менее эффективное сжатие может выполняться быстрее. В ядре необходимо добиться баланса между временем и степенью сжатия. Кроме того, важно чтобы выбор алгоритма оставался гибким. Например для выполнения одной задачи подойдёт один алгоритм сжатия, а для второй другой. В модуле ядре zram существует специальное API, доступное из пространства пользователя, для выбора алгоритма сжатия. Данный модуль поддерживает несколько алгоритмов сжатия, например DEFLATE \cite{deflate}, LZ4 \cite{lz4}, zstd \cite{zstd}. 
 
-Модуль в ядре zRam описывается одним экземпляром структуры \texttt{struct zram} (листинг \ref{code:zram})
+Из-за того что размер страницы достаточно большой (4 Кб), сжатие и восстановление данных -- дорогостоящие операции, поэтому необходимо ограничить количество этих операций. Нужно тщательно выбирать, какие страницы стоит сжимать, а какие нет. Алгоритм, реализованный в ядре Linux, определяющий какие страницы нужно сжимать, выбирает те страницы, которые вероятно будут использоваться снова, но вряд ли будут использоваться в ближайшем будущем \cite{in-kernel-memory-compression}. Такая реализация позволяет не тратить всё время ЦПУ на многократное сжатие и распаковку страниц. Кроме того, необходимо чтобы ядро могло идентифицировать сжатую страницу -- иначе её невозможно найти и распаковать.
+
+Размер страницы, к которой был применён алгоритм сжатия зависит от данных на исходной странице. Степень сжатия страницы описывается следующей формулой (\ref{fig:page-compressing}):
+
+\begin{equation}\label{fig:page-compressing}
+	k = \frac{PAGE\_SIZE}{zsize},
+\end{equation}
+где \texttt{PAGE\_SIZE} размер страницы памяти в системе, а \texttt{zsize} -- размер сжатой страницы. 
+
+Чаще всего, размер сжатой страницы меньше чем \texttt{PAGE\_SIZE}, поэтому, обычно, коэффициент сжатия меньше единицы. Но, в некоторых случаях, коэффициент сжатия может быть больше единицы. В среднем страница памяти в ядре сжимается в два раза \cite{in-kernel-memory-compression}, то есть коэффициент сжатия $ k =\frac{1}{2}$.
+
+Неудачная попытка записать блок в подсистему блочного вывода приводит к большим накладным расходам \cite{in-kernel-memory-compression}. По этой причине, при сохранении страницы памяти со степенью сжатия $k < 1$, zram сохраняет исходную страницу памяти (не сжатую) в ОЗУ, что в конечном итоге не приводит к экономии места.
+
+Модуль в ядре zram описывается с помощью структуры \texttt{struct zram} (листинг \ref{code:zram}).
 
 \begin{code}
 	\captionof{listing}{Структура \texttt{struct zram}}
@@ -250,9 +284,9 @@ zRam \cite{zram} -- модуль ядра Linux, который использу
 	{code/zram.c}
 \end{code}
 
-Рассматриваемая структура хранит в себе таблицу страниц, семафор, с помощью которого достигается синхронизация при параллельной обработке \cite{in-kernel-memory-compression}, название алгоритма, которые будет производить сжатие, размер диска, статистику и другие поля.
+Данная структура хранит в себе массив сжатых страниц, семафор, с помощью которого достигается синхронизация при параллельной обработке \cite{in-kernel-memory-compression}, название алгоритма, который будет производить сжатие, размер блочного устройства, статистику по проведенным операциям и другие поля.
 
-Для хранения информации о сжатых страницах (их размер и данные) используется специальная таблица. Это необходимо, для того чтобы найти эту страницу для её дальнейшего преобразования к исходному (не сжатому) виду. Для этого используется структура \texttt{struct zram\_table\_entry}, которая представлена в листинге \ref{code:zram_table_entry}
+Для хранения информации о сжатых страницах (их размер и данные) используется массив структур. Это необходимо, для того чтобы найти эту страницу для её дальнейшего преобразования к исходному (не сжатому) виду. Элементом массива является структура \texttt{struct zram\_table\_entry}, которая представлена в листинге \ref{code:zram_table_entry}.
 
 \begin{code}
 	\captionof{listing}{Структура \texttt{struct zram\_table\_entry}}
@@ -274,9 +308,9 @@ zRam \cite{zram} -- модуль ядра Linux, который использу
 
 Для идентификации страниц и управления данными данный модуль использует прямой поиск по таблице страниц (массив из структур \\\texttt{struct zram\_table\_entry}), которая хранится в структуре \texttt{struct zram}.
 
-Для параллельная обработки страниц используется семафор \\\texttt{struct rw\_semaphore}.
+Для корректной параллельной обработки страниц используется семафор \\\texttt{struct rw\_semaphore}.
 
-zRam устраняет дубликаты страниц, которые содержат только нулевые байты. Модуль сохраняет лишь одну такую страницу и все остальные такие же страницы ссылаются на неё, не проводя сжатие этих страниц. Несмотря на то, чтобы определить, состоит ли страница полностью из нулевых байт, требуются накладные расходы, эти расходы чаще всего небольшие, по сравнению с затратами на сжатие \cite{in-kernel-memory-compression}.
+zram устраняет дубликаты страниц, которые состоят из одного и того же элемента. В таком случае, сохраняется лишь один этот элемент. Несмотря на то, чтобы определить, состоит ли страница полностью из одинаковых байт, требуются накладные расходы, эти расходы чаще всего небольшие, по сравнению с затратами на сжатие \cite{in-kernel-memory-compression}.
 
 На рисунке \ref{fig:zram-kernel} представлена модель взаимодействия модуля zram, ядра и пользователя.
 
@@ -287,19 +321,43 @@ zRam устраняет дубликаты страниц, которые сод
 	\label{fig:zram-kernel}
 \end{figure}
 
+\subsubsection{Опция writeback}
+
+Модуль ядра zram предоставляет возможно опционально включить специальную опцию writeback, которая позволяет сохранять неиспользуемые или несжимаемые страницы во вторичное хранилище, а не в оперативную память. Для реализации данного функционала структура \texttt{struct zram} хранит в себе указатель на структуру \texttt{struct block\_device} (см. листинг \ref{code:zram}). Структура \texttt{struct block\_device} представлена на листинге \ref{code:struct_block_device}.
+
+Данная структура является описанием некоторого блочного устройства внутри ядра Linux. В случае модуля zram, структура \texttt{struct block\_device} описывает вторичное хранилище, в которое будут отправляться несжимаемые или неиспользуемые страницы оперативной памяти при включенной опции\\ writeback.
+
+\begin{code}
+	\captionof{listing}{Структура \texttt{struct block\_device}}
+	\label{code:struct_block_device}
+	\inputminted
+	[
+	frame=single,
+	framerule=0.5pt,
+	framesep=20pt,
+	fontsize=\small,
+	tabsize=4,
+	linenos,
+	numbersep=5pt,
+	xleftmargin=10pt,
+	]
+	{text}
+	{code/struct_block_device.c}
+\end{code}
+
 \subsubsection{Схема работы}
 
 \subsubsection{Структуры данных}
 
-\subsubsection{Опция \texttt{writeback}} 
-
 \subsection{Вывод}
 
-В данном разделе были рассмотрены понятия сжатия данных, оперативной памяти и виртуальной памяти. 
+В данном разделе был проведен анализ предметной области. 
+
+Были рассмотрены понятия сжатия данных, оперативной памяти и виртуальной памяти. 
 
 Были характеризованы современные ядра операционных систем: с монолитной и микроядерной архитектурой. 
 
-Проведён краткий обзор ядра Linux, структур данных и функций отвечающих за управление памятью внутри ядра.
+Проведён краткий обзор ядра Linux, структур данных и API управления памятью внутри ядра.
 
 Описана работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
 
