docs: introduce techonology half

--- a/docs/30-technology.tex
+++ b/docs/30-technology.tex
@@ -1,3 +1,161 @@
 \section{Технологическая часть}
 
+В данном разделе описываются средства разработки программного обеспечения и требования к нему. Приводится структура разрабо­танного ПО.
+
+\subsection{Выбор средств разработки}
+
+\subsubsection{Выбор языка программирования}
+
+Ядро ОС Linux написано на языке программирования C с использованием стандарта C89. Встроенный драйвер ядра Linux, zram, так же написан на языке программирования С. Программное обеспечение представляет из себя модификацию модуля ядра zram, в связи с чем для реализации программного обеспечения был выбран язык программирования C версии стандарта C89. В модуле ядра zram, как и в ядре Linux, используется процедурный подход к программированию. Язык C поддерживает процедурную парадигму программирования.
+
+\subsubsection{Версия ядра Linux}
+
+В качестве версии ядра Linux была выбрана версия 5.17.5. На момент написания дипломной работы, эта версия является самой актуальной версией ядра Linux. Данный факт позволяет использовать все возможности ядра при разработке программного обеспечения. 
+
+\subsection{Сборка программного обеспечения}
+
+Разработанное программное обеспечение является часть ядра Linux. Для сборки проекта используется специальная утилита make, позволяющая автоматизировать сборку ядра. make является кроссплатформенной системой автоматизации сборки программного обеспечения из исходного кода. make позволяет существенно ускорить процесс сборки проекта. Так, например, при изменении одного исходного файла проекта, заново будет собран в объектный файл лишь этот исходный файл, а не все файлы проекта.
+
+Для сборки и включения модуля zram в итоговый образ ядра Linux, в конфигурационном файле ядра необходимо включить опции, указанные в листинге \ref{code:defconfig}. Ниже приведено детальное описание включаемых опций:
+
+\begin{itemize}
+	\item \texttt{CONFIG\_ZRAM} -- опция, включающая поддержку модуля zram в итоговый образ ядра Linux. Без этой опции, использовать zram будет невозможно;
+	\item \texttt{CONFIG\_ZRAM\_DEF\_COMP\_ZSTD} и \texttt{CONFIG\_ZRAM\_DEF\_COMP="zstd"} -- выбрать алгоритм сжатия, который будет использоваться при сжатии страниц оперативной памяти. В данном случае, выбран алгоритм сжатия zstd;
+	\item \texttt{CONFIG\_ZRAM\_ENTROPY} -- эта опция включает поддержку энтропийной оптимизации модуля zram.
+	\item \texttt{CONFIG\_ZRAM\_ENTROPY\_THRESHOLD=100000} -- данный параметр задает границу для отсекаемых страниц. Страницы, энтропия которых выше данного значения, будут храниться не в сжатом виде. Данное значение для каждого алгоритма сжатия выбирается оптимальным образом автоматически, но, при этом, имеется возможность установить его в ручную.
+\end{itemize}
+Разработанное программное обеспечение представлено в виде опции. Эту опцию можно выключать и отключать на стадии сборки ядра.
+
+\begin{code}
+	\captionof{listing}{Опции, которые необходимо добавить в конфигурационный файл ядра}
+	\label{code:defconfig}
+	\inputminted
+	[
+	frame=single,
+	framerule=0.5pt,
+	framesep=20pt,
+	fontsize=\small,
+	tabsize=4,
+	linenos,
+	numbersep=5pt,
+	xleftmargin=10pt,
+	]
+	{text}
+	{code/defconfig}
+\end{code}
+
+\subsection{Требования к вычислительной системе}
+
+Разработанное программное обеспечение представляет из себя модификацию ядра Linux. Для сборки и установки ядра в систему требуются следующие библиотеки и утилиты, представленные в таблице 1.
+
+\begin{table}[!htb]
+	\label{table:dependencies}
+	\begin{center}
+		\caption{Таблица ПО, необходимого для сборки и установки ядра}
+		\begin{tabular}{|c|c|}
+			\hline
+			\bfseries ПО & \bfseries Минимальная версия \\
+			\hline
+			gcc & 3.2 \\ \hline
+			GNU make & 3.80 \\ \hline
+			binutils & 2.12 \\ \hline
+			util-linux & 2.10o \\ \hline
+			module-init-tools & 0.9.10 \\ \hline
+			e2fsprogs & 1.41.4 \\ \hline
+			jfsutils & 1.1.3 \\ \hline
+			reiserfsprogs & 3.6.3 \\ \hline
+			xfsprogs & 2.6.0 \\ \hline
+			squashfs-tools & 4.0 \\ \hline
+			btrfs-progs & 0.18 \\ \hline
+			pcmciautils & 004 \\ \hline
+			quota-tools & 3.09 \\ \hline
+			PPP & 2.4.0 \\ \hline
+			isdn4k-utils & 3.1pre1 \\ \hline
+			nfs-utils & 1.0.5 \\ \hline
+			procps & 3.2.0 \\ \hline
+			oprofile & 0.9 \\ \hline
+			udev & 081 \\ \hline
+			grub & 0.93 \\ \hline
+			mcelog & 0.6 \\ \hline
+			iptables & 1.4.2 \\ \hline
+			openssl, libcrypto & 1.0.0 \\ \hline
+			bc & 1.2 \\ \hline
+		\end{tabular}
+	\end{center}
+\end{table}
+
+\subsection{Структура программного обеспечения}
+
+Разработанное ПО представляет из себя функцию вычисления информационной энтропии, её вызов перед попыткой сжатия страницы и сравнение с пороговым значением. Ниже описывается эта функция и модификация функции, в которой происходит её вызов и принятие решение о дальнейшем хранении страницы памяти.
+
+\subsubsection{Функция вычисления информационной энтропии}
+
+Функция shannon\_entropy в качестве единственного входного параметра получает указатель на массив байт размером PAGE\_SIZE. Возвращает информационную энтропию, подсчитанную по формуле \ref{eq:shannon_entropy}, для данного набора байт.
+
+\begin{equation}\label{eq:shannon_entropy}
+	H(x) = -\sum^{n}_{i = 1} = p_{i} log_{2} p_{i},
+\end{equation}
+где $p_{i}$ -- количество байтов размером $i$ в рассматриваемом массиве.
+
+Для вычисления логарифма используется встроенная функция ядра ilog2. В ядре Linux нет поддержки чисел с плавающей запятой, поэтому функция ilog2 работает только с целыми числами. Передаваемый параметр в функцию ilog2 ($p_{i}$) возводится в 4 степень для увлечения точности вычислений.
+
+Пример реализации функции shannon\_entropy() для модуля zram представлен в листинге \ref{code:shannon_entropy}
+
+\begin{code}
+	\captionof{listing}{Функция shannon\_entropy()}
+	\label{code:shannon_entropy}
+	\inputminted
+	[
+	frame=single,
+	framerule=0.5pt,
+	framesep=20pt,
+	fontsize=\small,
+	tabsize=4,
+	linenos,
+	numbersep=5pt,
+	xleftmargin=10pt,
+	]
+	{text}
+	{code/shannon_entropy.c}
+\end{code}
+
+\subsubsection{Принятие решение о дальнейшем хранении страницы}
+
+Сжатие страницы происходит в функции zcomp\_compress(), которая, в свою очередь вызывается в функции \_\_zram\_bvec\_write(). Вызов функции\\ shannon\_entropy() необходимо произвести до сжатия данных, хранящихся на странице памяти, поэтому функция \_\_zram\_bvec\_write() была модифицирована. 
+
+Перед вызовом zcomp\_compress() для каждой попавшей в эту функцию страницы считается информационная энтропия. Если вычисленное значение выше порогового значения CONFIG\_ZRAM\_ENTROPY\_THRESHOLD, объявленного с помощью директивы \#define, то эта страница помечается как несжимаемая в памяти. В обратном случае, происходит вызов zcomp\_compress() и данные, находящиеся на этой странице памяти, сжимаются. 
+
+Пример реализации модификации функции \_\_zram\_bvec\_write() модуля zram представлен в листинге \ref{code:call_shannon_entropy}.
+
+\begin{code}
+	\captionof{listing}{Функция \_\_zram\_bvec\_write()}
+	\label{code:call_shannon_entropy}
+	\inputminted
+	[
+	frame=single,
+	framerule=0.5pt,
+	framesep=20pt,
+	fontsize=\small,
+	tabsize=4,
+	linenos,
+	numbersep=5pt,
+	xleftmargin=10pt,
+	]
+	{text}
+	{code/shannon_entropy_call.c}
+\end{code}
+
+\subsection{Руководство пользователя}
+
+Для запуска разработанного ПО необходимо запущенное ядро Linux, собранное с опциями указанными в главе 3.3. Список включенных опций на уже запущенном ядре Linux можно узнать с помощью команды zcat /proc/config.gz/.
+
+Собрать ядро Linux из исходных файлов можно с помощью команды make -j\$(nproc). До сборки необходимо убедиться, что в конфигурационном файле, имеющем имя .config и находящемся в корне проекта, включены опции указанные в главе 3.2. Для того чтобы загрузчик мог использовать собранный образ ядра, необходимо установить его с помощью команд  make modules\_install и make install.
+
+Для того чтобы инициализировать и задать размер блочного устройства zram необходимо использовать команду: echo 512M > /sys/block/zram0/disksize. В данном примере размер устройства равен 512 мегабайтам. Задавать размер, превышающий размер ОЗУ более чем в 2 раза не имеет смысла: в среднем коэффициент сжатия равен двум \cite{zram}.
+
+Для того чтобы установить блочное устройство zram в качестве устройства, которое будет использовать в подкачке страниц, необходимо использовать следующие команды: mkswap /dev/zram0 и swapon /dev/zram0.
+
+\subsection{Вывод}
+
+В данном разделе были описаны средства разработки программного обеспечения и требования к ПО. Была приведена структура разработанного ПО.
 \pagebreak
