--- a/docs/40-research.tex
+++ b/docs/40-research.tex
@@ -1,3 +1,5 @@
 \section{Исследовательская часть}
 
+В рамках дипломной работы было проведено исследование время обработки и коэффициент сжатия файлов в блочном устройстве zram. Результаты исследования представлены в данном разделе.
+
 \pagebreak
