--- a/docs/50-conclusion.tex
+++ b/docs/50-conclusion.tex
@@ -1,6 +1,8 @@
 \section*{ЗАКЛЮЧЕНИЕ}
 \addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
 
+\textbf{Это надо поменять}
+
 Были рассмотрены понятия предметной области: сжатия данных, оперативной памяти и виртуальной памяти. 
 
 Были характеризованы современные ядра операционных систем: с монолитной и микроядерной архитектурой, описаны их плюсы и минусы.
