--- a/docs/main.tex
+++ b/docs/main.tex
@@ -22,6 +22,9 @@
 	\include{02-naming}
 	\include{03-intro}
 	\include{10-analysis}
+	\include{20-design}
+	\include{30-technology}
+	\include{40-research}
 	\include{50-conclusion}
 	\include{60-bibliography}
 \end{document}
