docs: introduce research half

--- a/docs/60-bibliography.tex
+++ b/docs/60-bibliography.tex
@@ -68,6 +68,22 @@
 	\bibitem{page-fault}
 	Kernel level exception handling -- The Linux Kernel Documentation [Электронный ресурс]. – Режим доступа: https://github.com/facebook/zstd, свободный – (20.11.2021)
 	
+	\bibitem{pdf}
+	What is a PDF? Portable Document Format | Adobe Acrobat [Электронный ресурс]. – Режим доступа: 	https://www.adobe.com/acrobat/about-adobe-pdf.html, свободный – (27.04.2022)
+	
+	\bibitem{apk}
+	What is APK file (Android Package Kit file format)? - TechTarget [Электронный ресурс]. – Режим доступа: 	https://www.techtarget.com/whatis/definition/APK-file-Android-Package-Kit-file-format, свободный – (27.04.2022)
+	
+	\bibitem{tar}
+	tar(1) - Linux manual page - man7.org [Электронный ресурс]. – Режим доступа: https://man7.org/linux/man-pages/man1/tar.1.html, свободный – (27.04.2022)
+	
+	\bibitem{perf}
+	Perf Wiki | Linux Kernel  [Электронный ресурс]. – Режим доступа: https://perf.wiki.kernel.org/index.php/Main\_Page, свободный – (27.04.2022)
+	
+	\bibitem{rfc}
+	PatchTipsAndTricks - Linux Kernel Newbies  [Электронный ресурс]. – Режим доступа: https://kernelnewbies.org/PatchTipsAndTricks, свободный – (27.04.2022)
+	https://kernelnewbies.org/PatchTipsAndTricks
+	
 \end{thebibliography}
 \endgroup
 
